# alex-portfolio-backend

./: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yaml
migrations/2024-06-12-001615_create_user/: up.sql
migrations/2024-06-16-234354_create_refresh_token/: up.sql
migrations/2024-06-16-234354_create_token/: up.sql
src/: lib.rs  main.rs  schema.rs
src/adapters/: mod.rs
src/adapters/controllers/: mod.rs
src/adapters/controllers/auth/: auth_signin_controller.rs  mod.rs
src/adapters/controllers/user/: mod.rs  user_create_controller.rs
src/adapters/repositories/: refresh_token_repository.rs  token_repository.rs  user_repository.rs
src/adapters/shared/: app_state.rs
src/application/usecases/: auth_service_jwt.rs  mod.rs
src/auth/structs/: claims.rs
src/domain/: mod.rs
src/domain/entities/: claims.rs  mod.rs  refresh_token.rs  token.rs  user.rs
src/domain/repositories/: refresh_token_repository.rs  token_repository.rs  user_repository.rs
src/domain/usecases/: auth_service.rs  mod.rs
src/infrastructure/: database.rs  mod.rs
