[package]
name = "aguia-vitrais-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
bcrypt = "0.15.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dotenv = "0.15.0"
validator = { version = "0.18.1", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres"] }
