[package]
name = "aguia-vitrais-back"
version = "0.1.0"
edition = "2021"

[[bin]]
name ="aguia-vitrais-back" 
path = "src/main.rs"

[lib]
name = "aguia_vitrais_back"
path = "src/lib.rs"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
bcrypt = "0.15.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dotenvy = "0.15.7"
validator = { version = "0.18.1", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.80"
uuid = { version = "1.9.1", features = ["serde"] }
